<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Impeller</string>
    <string name="cancel_button">Cancel</string>

    <!-- Navigation -->
    <string name="account_category">Accounts</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- Tabs -->
    <string name="feed_major">Main</string>
    <string name="feed_minor">Meanwhile</string>
    <string name="feed_direct">Messages</string>

    <!-- Menu items -->
    <string name="action_sign_out">Sign out</string>
    <string name="action_post">Post</string>
    <string name="action_post_note">Post Note</string>
    <string name="action_post_image">Post Image</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_like">Like</string>
    <string name="action_unlike">Unlike</string>
    <string name="action_reply">Reply</string>
    <string name="action_replyImage">Reply with image</string>
    <string name="hint_comment">Comment...</string>
    <string name="posted_by">Posted by</string>
    <string name="title_activity_post">New post</string>
    <string name="title_activity_post_reply">Reply</string>

    <!-- Post activity -->
    <string name="public_post">Make post public</string>
    <string name="post_description">Description:</string>
    <string name="post_title">Title:</string>
    <string name="post_location">Location:</string>
    <string name="no_location">None</string>
    <string name="hint_message">Message...</string>
    <string name="hint_title">Title... (optional)</string>
    <string name="posting_title">Posting...</string>
    <string name="status_submitting_post">Submitting post</string>
    <string name="status_uploading_image">Uploading image</string>
    <string name="just_a_moment">Just a moment</string>
    <string name="getting_information">Getting information...</string>
    <string name="post_error">Error creating post</string>

    <!-- Share activity -->
    <string name="sharing_title">Sharing...</string>
    <string name="sharing_status">Submitting activity...</string>

    <!-- Preferences -->
    <string name="pref_title_limit_database_size">Limit maximum database size</string>
    <string name="pref_database_max_item_count">Maximum item count</string>
    <string name="in_reply_to_post_by">In reply to a post by</string>
    <string name="action_follow">Follow</string>
    <string name="action_following">Following</string>
    <string name="action_replyNote">Reply with note</string>
    <string name="accountpicker_new_account">New Account</string>
    <string name="post_to_label">To:</string>
    <string name="post_cc_label">Cc:</string>
    <string name="public_collection">Public</string>
    <string name="followers_collection">Followers</string>
    <string name="action_viewInBrowser">View in Browser</string>
    <string name="title_error_dialog">Error</string>
    <string name="error_no_message_specified">No message specified</string>
    <string name="error_no_recipients">No recipients specified</string>
    <string name="direct_notification_title">Message from %s</string>
    <string name="verb_posted">posted</string>
    <string name="verb_followed">followed</string>
    <string name="verb_stopped_following">stopped following</string>
    <string name="verb_favorited">favorited</string>
    <string name="verb_unfavorited">unfavorited</string>
    <string name="verb_shared">shared</string>
    <string name="verb_unshared">unshared</string>
    <string name="verb_liked">liked</string>
    <string name="verb_unliked">unliked</string>
    <string name="verb_deleted">deleted</string>
    <string name="verb_created">created</string>
    <string name="verb_added">added</string>
    <string name="verb_updated">updated</string>
    <string name="verb_joined">joined</string>
    <string name="verb_removed">removed</string>
    <string name="verb_left">left</string>
    <string name="verb_played">played</string>
    <string name="verb_listened_to">listened to</string>
    <string name="verb_checked_in_at">checked in at</string>
    <string name="object_type_a_note">a note</string>
    <string name="object_type_an_image">an image</string>
    <string name="object_type_a_comment">a comment</string>
    <string name="object_type_a_person">a person</string>
    <string name="object_type_a_group">a group</string>
    <string name="object_type_an_activity">an activity</string>
    <string name="object_type_a_place">a place</string>
    <string name="object_type_a_collection">a collection</string>
    <string name="object_type_a_review">a review</string>
    <string name="object_type_an_article">an article</string>
    <string name="object_type_a_video">a video</string>
    <string name="object_type_an_audio">an audio</string>
    <string name="object_type_a_service">a service</string>
    <string name="object_type_an_application">an application</string>
    <string name="object_type_a_game">a game</string>
    <string name="object_type_an_event">an event</string>
    <string name="object_type_a_file">a file</string>
    <string name="object_type_an_object">an object</string>

    <!-- Use this to change word order if the language requires it -->
    <!-- 1 = actor, 2 = verb, 3 = object, 4 = target of a reply -->
    <string name="format_string_activity">%1$s %2$s %3$s</string>
    <string name="format_string_reply">%1$s %2$s %3$s in reply to %4$s</string>
    <string name="actor_unknown">Unknown</string>
    <string name="comment_meta_by">By</string>
    <string name="action_share">Share</string>
    <string name="title_activity_share">Share</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_group_notification_header">%d new messages</string>
    <string name="database_upgrade_title">Database upgrade in progress</string>
    <string name="database_upgrade_text">Impeller is upgrading your database; this may take a while. You will not be able to access your feed during this time.</string>

</resources>
