
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@drawable/card_bg">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
            android:hint="@string/post_title"
            android:background="@android:color/transparent"
            android:padding="4dp"
            android:textStyle="normal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/dividerVertical" />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image"
                android:src="@drawable/ic_launcher"
                android:maxHeight="384dp"
                android:adjustViewBounds="true"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/dividerVertical" />

        <EditText
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/post_description"
            android:background="@android:color/white"
            android:padding="4dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/dividerVertical" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/view_post_location" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/dividerVertical" />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_post"
                android:id="@+id/isPublic"/>

    </LinearLayout>
</ScrollView>